external-crates/move/crates/move-compiler/tests/move_2024/typing/module_call_visibility_mixed_invalid.exp
error[E02016]: invalid visibility modifier
   ┌─ tests/move_2024/typing/module_call_visibility_mixed_invalid.move:10:5
   │
10 │     public(package) fun f_package_call_package() { mod_0::f_pkg_public() }
   │     ^^^^^^^^^^^^^^^ Cannot mix 'package' and 'friend' visibilities in the same module
11 │     public(friend) fun f_friend_call_package() { mod_0::f_pkg_public() }
   │     -------------- 'friend' visibility used here

error[E02016]: invalid visibility modifier
   ┌─ tests/move_2024/typing/module_call_visibility_mixed_invalid.move:11:5
   │
10 │     public(package) fun f_package_call_package() { mod_0::f_pkg_public() }
   │     --------------- 'public(package)' visibility used here
11 │     public(friend) fun f_friend_call_package() { mod_0::f_pkg_public() }
   │     ^^^^^^^^^^^^^^ Cannot mix 'friend' and 'package' visibilities in the same module

error[E02016]: invalid visibility modifier
   ┌─ tests/move_2024/typing/module_call_visibility_mixed_invalid.move:17:5
   │
17 │     friend 0x42::mod_1;
   │     ^^^^^^^^^^^^^^^^^^^ Cannot define 'friend' modules and use 'public(package)' visibility in the same module
18 │ 
19 │     public(package) fun f_package_call_package(): u64 { 0 }
   │     --------------- 'public(package)' visibility used here

error[E02016]: invalid visibility modifier
   ┌─ tests/move_2024/typing/module_call_visibility_mixed_invalid.move:19:5
   │
17 │     friend 0x42::mod_1;
   │     ------------------- 'friend' visibility used here
18 │ 
19 │     public(package) fun f_package_call_package(): u64 { 0 }
   │     ^^^^^^^^^^^^^^^ Cannot mix 'package' and 'friend' visibilities in the same module

